@@ -89,7 +89,7 @@ public final class XPackRestTestHelper {
             final List<String> missingTemplates = expectedTemplates.stream()
                 .filter(each -> templates.contains(each) == false)
                 .filter(each -> legacyTemplates.contains(each) == false)
-                .collect(Collectors.toList());
+                .toList();
 
             // While it's possible to use a Hamcrest matcher for this, the failure is much less legible.
             if (missingTemplates.isEmpty() == false) {
